--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="./tailwind.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" type="text/css">
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!--Replace with your tailwind.css once created-->
@@ -99,7 +99,7 @@
     </g>
 </svg>
 </div>
-<section class="bg-black border-b py-8">
+<section class="bg-back border-b py-8">
     <div class=" max-w-5xl mx-auto m-8">
         <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white-400">
             Conheça nosso time!
@@ -187,7 +187,7 @@
 <div class="relative z-0 -mt-10 g:-mt-10">
        
 </div>
-<section class="bg-black py-8">
+<section class="bg-back py-8">
     <div class="container mx-auto px-2 pt-4 pb-12 text-gray-800">
         <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
             Benefícios
@@ -197,8 +197,8 @@
         </div>
         <div class="flex flex-col lg:flex-row justify-center items-center lg:space-x-4">
             <!-- Card 1 -->
-            <div class="shadow-2xl flex-col w-full lg:w-1/4 mx-auto lg:mx-0 bg-black mt-4">
-                <div class="flex-1 bg-black text-white overflow-hidden shadow">
+            <div class="shadow-2xl flex-col w-full lg:w-1/4 mx-auto lg:mx-0 bg-back mt-4">
+                <div class="flex-1 bg-back text-white overflow-hidden shadow">
                     <div class="p-8 text-2xl font-bold text-center border-b-4 text-pink-400">
                         <svg class="h-8 w-8 text-pink-400 inline-block mb-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M20.24 12.24a6 6 0 0 0-8.49-8.49L5 10.5V19h8.5z" />
@@ -213,8 +213,8 @@
                 </div>
             </div>
             <!-- Card 2 -->
-            <div class="shadow-2xl flex-col w-full lg:w-1/4 mx-auto lg:mx-0 bg-black mt-4">
-                <div class="flex-1 bg-black text-white overflow-hidden shadow">
+            <div class="shadow-2xl flex-col w-full lg:w-1/4 mx-auto lg:mx-0 bg-back mt-4">
+                <div class="flex-1 bg-back text-white overflow-hidden shadow">
                     <div class="p-8 text-2xl font-bold text-center border-b-4 text-pink-400">
                         <svg class="h-8 w-8 text-pink-400 inline-block mb-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"/>
@@ -227,8 +227,8 @@
                 </div>
             </div>
             <!-- Card 3 -->
-            <div class="shadow-2xl flex-col w-full lg:w-1/4 mx-auto lg:mx-0 bg-black mt-4">
-                <div class="flex-1 bg-black text-white overflow-hidden shadow">
+            <div class="shadow-2xl flex-col w-full lg:w-1/4 mx-auto lg:mx-0 bg-back mt-4">
+                <div class="flex-1 bg-back text-white overflow-hidden shadow">
                     <div class="p-8 text-2xl font-bold text-center border-b-4 text-pink-400">
                         <svg class="h-8 w-8 text-pink-400 inline-block mb-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="5" y="2" width="14" height="20" rx="2" ry="2" />
@@ -242,8 +242,8 @@
                 </div>
             </div>
             <!-- Card 4 -->
-            <div class="shadow-2xl flex-col w-full lg:w-1/4 mx-auto lg:mx-0 bg-black mt-4">
-                <div class="flex-1 bg-black text-white overflow-hidden shadow">
+            <div class="shadow-2xl flex-col w-full lg:w-1/4 mx-auto lg:mx-0 bg-back mt-4">
+                <div class="flex-1 bg-back text-white overflow-hidden shadow">
                     <div class="p-8 text-2xl font-bold text-center border-b-4 text-pink-400">
                         <svg class="h-8 w-8 text-pink-400 inline-block mb-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <polygon points="23 7 16 12 23 17 23 7" />
@@ -341,7 +341,7 @@
       
 
     <!-- Modal Structure -->
-    <div id="modal" class="fixed top-0 left-0 w-full h-full bg-black bg-opacity-75 hidden items-center justify-center z-50">
+    <div id="modal" class="fixed top-0 left-0 w-full h-full bg-back bg-opacity-75 hidden items-center justify-center z-50">
       <div class="bg-white w-11/12 md:max-w-3xl mx-auto rounded shadow-lg z-50 overflow-y-auto">
         <div class="py-4 text-left px-6">
           <div class="flex justify-between items-center pb-3">
