Update Lorrane Resultado index.html

--- a/index.html
+++ b/index.html
@@ -268,9 +268,11 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
                 </div>
               </div>
               <div class="w-auto fjalla-one-regular text-xl text-white-400 px-6">
-                Lorraine
+                Lorrane
               </div>
               <p class="text-white-800 text-base px-6 mb-5">
+                Com toda certeza, quero elogiar a determinação de vocês, o foco em fazer tudo dar certo. Posso imaginar o quão cansativo é montar tudo, fazer acontecer.
+                Mas foi e será cada vez mais um grande sucesso! Desejo do fundo do meu coração bençãos sem medidas na vida de vocês.Fiquei tão feliz, e quero mt poder acreditar cada vez mais no meu potencial!
               </p>
             </div>
           </div>
