--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
             <div class="content bg-back shadow-2xl overflow-hidden p-6">
               <div class="flex rounded justify-center w-full px-6 py-4">
                 <div class="image-container">
-                  <img src="./imgs/Antes Karine.png" alt="Antes">
+                  <img src="./imgs/Antes Karine.jpg" alt="Antes">
                 </div>
                 <div class="image-container">
-                  <img src="./imgs/Depois Karine.png" alt="Depois">
+                  <img src="./imgs/Depois Karine.jpg" alt="Depois">
                 </div>
               </div>
               <div class="w-auto fjalla-one-regular text-xl text-white-400 px-6">
