--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://www.instagram.com/desafiogymrats/" target="_blank">Instagram</a>
           </li>
         </ul>
-        <button id="navAction" class="mx-auto lg:mx-0 hover:underline fjalla-one-regular rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out bg-white text-gray-800" onclick="window.open('https://chk.eduzz.com/7WX5J5PY0A', '_blank')">
-          Participe
+        <button id="navAction" class="mx-auto lg:mx-0 hover:underline fjalla-one-regular rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out bg-white text-gray-800" onclick="window.open('https://forms.gle/EiRrRUths3uqha1q8', '_blank')">
+          Fila de Espera
         </button>
       </div>
     </div>
@@ -93,14 +93,14 @@
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <p class="uppercase tracking-loose w-full fjalla-one-regular"></p>
-          <h1 class="my-4 text-4xl fjalla-one-regular leading-tight">
-            Você está a um passo da sua melhor versão.       
+          <h1 class="mx-auto lg:mx-0 my-4 text-4xl fjalla-one-regular leading-tight">
+            Vagas esgotadas.       
           </h1>
           <p class="mx-auto lg:mx-0 leading-normal text-1xl mb-8">
-            Emagrecimento e Hipertrofia
+            Entre na Fila de Espera!
           </p>
-          <button class="z-10 mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://chk.eduzz.com/7WX5J5PY0A', '_blank')">
-            Participe!
+          <button class="z-10 mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://forms.gle/EiRrRUths3uqha1q8', '_blank')">
+            Fila de Espera
           </button>
         </div>
         <!--Right Col-->
@@ -543,8 +543,8 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
               <span class="text-base"> </span>
             </div>
             <div class="flex items-center justify-center">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://chk.eduzz.com/7WX5J5PY0A', '_blank')">
-                Participe
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://forms.gle/EiRrRUths3uqha1q8', '_blank')">
+                Fila de Espera
               </button>
             </div>
           </div>
@@ -581,8 +581,8 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
     <h3 class="my-4 text-base leading-tight">
       Um desafio diferente de tudo que você já viu, com o maior objetivo de você se tornar sua melhor versão, não só para saude física mas também para sua saude mental. Vamos acompanhar de perto seu processo e sua evolução sem largar a sua mão, sem te deixar sozinha. Vamos te ajudar alcançar seu objetivo sem sofrimentos ou dietas malucas.
     </h3>
-    <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://chk.eduzz.com/7WX5J5PY0A', '_blank')">
-      Participe!
+    <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://forms.gle/EiRrRUths3uqha1q8', '_blank')">
+      Fila de Espera!
     </button>
   </section>
   
