--- a/GymRatsMan.html
+++ b/GymRatsMan.html
@@ -219,7 +219,7 @@
         <div class="flex slide transition-transform duration-300 ease-in-out" style="transform: translateX(0%);">
           <!-- Instrutor 1 -->
           <div class="w-full flex-shrink-0 p-6 flex flex-col items-center">
-            <div class="instructor-image2 mb-4">
+            <div class="instructor-image-man mb-4">
               <img src="./imgs/LaraMini.png" alt="Lara">
             </div>
             <div class="text-center">
@@ -233,7 +233,7 @@
           </div>
           <!-- Instrutor 2 -->
           <div class="w-full flex-shrink-0 p-6 flex flex-col items-center">
-            <div class="instructor-image2 mb-4">
+            <div class="instructor-image-man mb-4">
               <img src="./imgs/LucasMini.png" alt="Raynara">
             </div>
             <div class="text-center">
@@ -246,7 +246,7 @@
             </div>
           </div>
           <div class="w-full flex-shrink-0 p-6 flex flex-col items-center">
-            <div class="instructor-image2 mb-4">
+            <div class="instructor-image-man mb-4">
               <img src="./imgs/rari.png" alt="Raynara">
             </div>
             <div class="text-center">
@@ -260,7 +260,7 @@
           </div>
           <!-- Instrutor 3 -->
           <div class="w-full flex-shrink-0 p-6 flex flex-col items-center">
-            <div class="instructor-image2 mb-4">
+            <div class="instructor-image-man mb-4">
               <img src="./imgs/fb.png" alt="Lara">
             </div>
             <div class="text-center">
