--- a/GymRatsMan.html
+++ b/GymRatsMan.html
@@ -182,7 +182,7 @@
               <p>Suporte Individualizado</p>
             </div>
             <ul class="w-full text-center text-sm">
-              <li class="py-4 text-white">Grupo individualizado no wpp com suporte 24hrs para todas suas dúvidas diretamente com a Lara e sua nutri + grupão com todas as alunas para uma motivar a outra.</li>
+              <li class="py-4 text-white">Grupo individualizado no wpp com suporte 24hrs para todas suas dúvidas diretamente com Lucas e sua nutri.</li>
             </ul>
           </div>
         </div>
