--- a/GymRatsMan.html
+++ b/GymRatsMan.html
@@ -241,7 +241,7 @@
                 @lucascsoares
               </h3>
               <p class="text-white-600 mb-8">
-                Oi, prazer, Lucas. Sou estudante de Educação Física e Engenheiro. Serei seu mentor, aquele que vai te acompanhar de perto para que você alcance os seus objetivos. Vou te ajudar a construir o seu shape!
+                Oi, prazer, Lucas. Sou estudante de Educação Física e Engenharia. Serei seu mentor, aquele que vai te acompanhar de perto para que você alcance os seus objetivos. Vou te ajudar a construir o seu shape!
               </p>
             </div>
           </div>
