--- a/GymRatsMan.html
+++ b/GymRatsMan.html
@@ -405,7 +405,7 @@
       <div class="h-1 mx-auto bg-white w-1/6 opacity-100 my-0 py-0 rounded-t"></div>
     </div>
     <h3 class="my-4 text-base leading-tight">
-      Um desafio diferente de tudo que você já viu, com o maior objetivo de você se tornar sua melhor versão, não só para saude física mas também para sua saude mental. Vamos acompanhar de perto seu processo e sua evolução sem largar a sua mão, sem te deixar sozinha. Vamos te ajudar alcançar seu objetivo sem sofrimentos ou dietas malucas.
+      Um desafio diferente de tudo que você já viu, com o maior objetivo de você se tornar sua melhor versão, não só para saude física mas também para sua saude mental. Vamos acompanhar de perto seu processo e sua evolução. Vamos te ajudar alcançar seu objetivo sem sofrimentos ou dietas malucas.
     </h3>
     <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://chk.eduzz.com/8WPDZEE3WP', '_blank')">
       Participe!
