--- a/GymRats.html
+++ b/GymRats.html
@@ -63,7 +63,7 @@
       </div>
       <div class="mobile-only pr-4">
         <a class="inline-block py-2 px-4 text-black fjalla-one-regular no-underline" href="https://loja.gymrats.com.br" target="_blank">Loja</a>
-        <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out ml-2">
+        <button id="nav-toggle" class="flex items-center p-1 text-gray-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out ml-2">
           <svg class="fill-current h-6 w-6" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <title>Menu</title>
             <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
@@ -296,7 +296,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
           </div>
         </div>
         
-        <button id="prev" class="absolute top-1/2 left-0 transform -translate-y-1/2 -mt-1.5 bg-pink-500 hover:bg-pink-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
+        <button id="prev" class="absolute top-1/2 left-0 transform -translate-y-1/2 -mt-1.5 bg-gray-500 hover:bg-gray-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
           <svg class="h-5 w-5 lg:h-6 lg:w-6 text-white transform rotate-180" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z"/>
             <circle cx="12" cy="12" r="9" />
@@ -305,7 +305,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
             <line x1="16" y1="12" x2="12" y2="8" />
           </svg>
         </button>
-        <button id="next" class="absolute top-1/2 right-0 transform -translate-y-1/2 -mt-1.5 bg-pink-500 hover:bg-pink-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
+        <button id="next" class="absolute top-1/2 right-0 transform -translate-y-1/2 -mt-1.5 bg-gray-500 hover:bg-gray-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
           <svg class="h-5 w-5 lg:h-6 lg:w-6 text-white" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z"/>
             <circle cx="12" cy="12" r="9" />
@@ -449,7 +449,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
             </div>
           </div>
         </div>
-        <button id="prev" class="absolute top-1/2 left-0 transform -translate-y-1/2 -mt-1.5 bg-pink-500 hover:bg-pink-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
+        <button id="prev" class="absolute top-1/2 left-0 transform -translate-y-1/2 -mt-1.5 bg-gray-500 hover:bg-gray-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
           <svg class="h-5 w-5 lg:h-6 lg:w-6 text-white transform rotate-180" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z"/>
             <circle cx="12" cy="12" r="9" />
@@ -458,7 +458,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
             <line x1="16" y1="12" x2="12" y2="8" />
           </svg>
         </button>
-        <button id="next" class="absolute top-1/2 right-0 transform -translate-y-1/2 -mt-1.5 bg-pink-500 hover:bg-pink-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
+        <button id="next" class="absolute top-1/2 right-0 transform -translate-y-1/2 -mt-1.5 bg-gray-500 hover:bg-gray-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
           <svg class="h-5 w-5 lg:h-6 lg:w-6 text-white" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z"/>
             <circle cx="12" cy="12" r="9" />
@@ -508,7 +508,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
             </div>
             <ul class="w-full text-center text-sm">
               <li class="border-b py-4 flex items-center justify-center">
-                <svg class="h-8 w-8 text-pink-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <svg class="h-8 w-8 text-gray-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M20.24 12.24a6 6 0 0 0-8.49-8.49L5 10.5V19h8.5z" />
                   <line x1="16" y1="8" x2="2" y2="22" />
                   <line x1="17.5" y1="15" x2="9" y2="15" />
@@ -516,20 +516,20 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
                 Acompanhamento nutricional exclusivo
               </li>
               <li class="border-b py-4 flex items-center justify-center">
-                <svg class="h-8 w-8 text-pink-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <svg class="h-8 w-8 text-gray-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"/>
                 </svg>
                 Protocolo de Treinamento
               </li>
               <li class="border-b py-4 flex items-center  justify-center">
-                <svg class="h-8 w-8 text-pink-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <svg class="h-8 w-8 text-gray-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <rect x="5" y="2" width="14" height="20" rx="2" ry="2" />
                   <line x1="12" y1="18" x2="12.01" y2="18" />
                 </svg>
                 Suporte Individualizado
               </li>
               <li class="border-b py-4 flex items-center justify-center">
-                <svg class="h-8 w-8 text-pink-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <svg class="h-8 w-8 text-gray-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <polygon points="23 7 16 12 23 17 23 7" />
                   <rect x="1" y="5" width="15" height="14" rx="2" ry="2" />
                 </svg>
@@ -599,7 +599,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
           <p class="uppercase text-gray-500 md:mb-6">Social</p>
           <ul class="list-reset mb-6">
             <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-              <a href="https://www.instagram.com/desafiogymrats/" target="_blank" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Instagram</a>
+              <a href="https://www.instagram.com/desafiogymrats/" target="_blank" class="no-underline hover:underline text-gray-800 hover:text-gray-500">Instagram</a>
             </li>
           </ul>
         </div>
@@ -637,7 +637,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
         navaction.classList.add("gradient");
         navaction.classList.remove("text-gray-800");
         navaction.classList.add("text-white");
-        brandname.classList.add("text-pink-600");
+        brandname.classList.add("text-gray-600");
 
         //Use to switch toggleColour colours
         for (var i = 0; i < toToggle.length; i++) {
@@ -654,7 +654,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
         navaction.classList.remove("text-white");
         navaction.classList.add("text-gray-800");
         brandname.classList.remove("text-white");
-        brandname.classList.remove("text-pink-600");
+        brandname.classList.remove("text-gray-600");
         //Use to switch toggleColour colours
         for (var i = 0; i < toToggle.length; i++) {
           toToggle[i].classList.add("text-white");
