--- a/GymRats.html
+++ b/GymRats.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
   <style>
     .gradient {
-      background: linear-gradient(220deg, #f86b9a 0%, #ec5185 100%);
+      background: linear-gradient(220deg, #4f4f4f 0%, #707070 100%);
     }
     .modal {
       display: none;
@@ -26,7 +26,7 @@
       display: flex;
     }
     .gradientText {
-      background-color: #ff83ac;
+      background-color: whitesmoke;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
