--- a/GymRatsMan.html
+++ b/GymRatsMan.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
   <style>
     .gradient {
-      background: linear-gradient(220deg, #4a90e2 0%, #254974 100%);
+      background: linear-gradient(220deg, #4f4f4f 0%, #707070 100%);
     }
     .modal {
       display: none;
@@ -26,7 +26,7 @@
       display: flex;
     }
     .gradientText {
-      background-color: #4a90e2;
+      background-color: whitesmoke;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
