--- a/GymRatsMan.html
+++ b/GymRatsMan.html
@@ -261,14 +261,14 @@
           <!-- Instrutor 3 -->
           <div class="w-full flex-shrink-0 p-6 flex flex-col items-center">
             <div class="instructor-image-man mb-4">
-              <img src="./imgs/fb.png" alt="Lara">
+              <img src="./imgs/RicardoMini.png" alt="Instrutor Ricardo">
             </div>
             <div class="text-center">
               <h3 class="text-3xl gradientText fjalla-one-regular leading-none mb-3">
-                @fb.personal_
+               Ricardo
               </h3>
               <p class="text-white-600 mb-8">
-                Oi, prazer, Felipe. Sou graduado em  Educação Física e meu foco é fazer você se apaixonar pelo exercício físico e se cuidar. Vou te dar todo o suporte nos seus treinos de forma dinâmica e com diferentes níveis de intensidade.
+                Oi, prazer, Ricardo. Sou graduado em  Educação Física e meu foco é fazer você se apaixonar pelo exercício físico e se cuidar. Vou te dar todo o suporte nos seus treinos de forma dinâmica e com diferentes níveis de intensidade.
               </p>
               <p>CREF:057732-G/RJ.</p>
             </div>
