--- a/GymRatsMan.html
+++ b/GymRatsMan.html
@@ -63,7 +63,7 @@
       </div>
       <div class="mobile-only pr-4">
         <a class="inline-block py-2 px-4 text-black fjalla-one-regular no-underline" href="https://loja.gymrats.com.br" target="_blank">Loja</a>
-        <button id="nav-toggle" class="flex items-center p-1 text-blue-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out ml-2">
+        <button id="nav-toggle" class="flex items-center p-1 text-gray-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out ml-2">
           <svg class="fill-current h-6 w-6" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <title>Menu</title>
             <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
@@ -79,7 +79,7 @@
             <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://www.instagram.com/desafiogymrats/" target="_blank">Instagram</a>
           </li>
         </ul>
-        <button id="navAction" class="mx-auto lg:mx-0 hover:underline fjalla-one-regular rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out bg-white text-gray-800" onclick="window.open('https://chk.eduzz.com/8WPDZEE3WP', '_blank')">
+        <button id="navAction" class="mx-auto lg:mx-0 hover:underline fjalla-one-regular rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out bg-white text-gray-800" onclick="window.open('https://sun.eduzz.com/Z0BB4XJ70A', '_blank')">
           Participe
         </button>
       </div>
@@ -99,7 +99,7 @@
           <p class="mx-auto lg:mx-0 leading-normal text-1xl mb-8">
             Garanta sua vaga!
           </p>
-          <button class="z-10 mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://chk.eduzz.com/8WPDZEE3WP', '_blank')">
+          <button class="z-10 mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://sun.eduzz.com/Z0BB4XJ70A', '_blank')">
             Participe
           </button>
         </div>
@@ -270,12 +270,12 @@
               <p class="text-white-600 mb-8">
                 Oi, prazer, Ricardo. Sou graduado em  Educação Física e meu foco é fazer você se apaixonar pelo exercício físico e se cuidar. Vou te dar todo o suporte nos seus treinos de forma dinâmica e com diferentes níveis de intensidade.
               </p>
-              <p>CREF:057732-G/RJ.</p>
+              <p>.</p>
             </div>
           </div>
         </div>
         
-        <button id="prev" class="absolute top-1/2 left-2 transform -translate-y-1/2 -mt-1.5 bg-blue-500 hover:bg-blue-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
+        <button id="prev" class="absolute top-1/2 left-2 transform -translate-y-1/2 -mt-1.5 bg-gray-500 hover:bg-gray-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
           <svg class="h-5 w-5 lg:h-6 lg:w-6 text-white transform rotate-180" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z"/>
             <circle cx="12" cy="12" r="9" />
@@ -284,7 +284,7 @@
             <line x1="16" y1="12" x2="12" y2="8" />
           </svg>
         </button>
-        <button id="next" class="absolute top-1/2 right-2 transform -translate-y-1/2 -mt-1.5 bg-blue-500 hover:bg-blue-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
+        <button id="next" class="absolute top-1/2 right-2 transform -translate-y-1/2 -mt-1.5 bg-gray-500 hover:bg-gray-700 text-white fjalla-one-regular p-1.5 lg:p-2 rounded-full shadow-lg focus:outline-none focus:shadow-outline transition-transform duration-300 ease-in-out">
           <svg class="h-5 w-5 lg:h-6 lg:w-6 text-white" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z"/>
             <circle cx="12" cy="12" r="9" />
@@ -334,7 +334,7 @@
             </div>
             <ul class="w-full text-center text-sm">
               <li class="border-b py-4 flex items-center justify-center">
-                <svg class="h-8 w-8 text-blue-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <svg class="h-8 w-8 text-gray-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M20.24 12.24a6 6 0 0 0-8.49-8.49L5 10.5V19h8.5z" />
                   <line x1="16" y1="8" x2="2" y2="22" />
                   <line x1="17.5" y1="15" x2="9" y2="15" />
@@ -342,20 +342,20 @@
                 Acompanhamento nutricional exclusivo
               </li>
               <li class="border-b py-4 flex items-center justify-center">
-                <svg class="h-8 w-8 text-blue-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <svg class="h-8 w-8 text-gray-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"/>
                 </svg>
                 Protocolo de Treinamento
               </li>
               <li class="border-b py-4 flex items-center  justify-center">
-                <svg class="h-8 w-8 text-blue-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <svg class="h-8 w-8 text-gray-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <rect x="5" y="2" width="14" height="20" rx="2" ry="2" />
                   <line x1="12" y1="18" x2="12.01" y2="18" />
                 </svg>
                 Suporte Individualizado
               </li>
               <li class="border-b py-4 flex items-center justify-center">
-                <svg class="h-8 w-8 text-blue-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <svg class="h-8 w-8 text-gray-500 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <polygon points="23 7 16 12 23 17 23 7" />
                   <rect x="1" y="5" width="15" height="14" rx="2" ry="2" />
                 </svg>
@@ -369,7 +369,7 @@
               <span class="text-base"> </span>
             </div>
             <div class="flex items-center justify-center">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://chk.eduzz.com/8WPDZEE3WP', '_blank')">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://sun.eduzz.com/Z0BB4XJ70A', '_blank')">
                 Participe
               </button>
             </div>
@@ -407,7 +407,7 @@
     <h3 class="my-4 text-base leading-tight">
       Um desafio diferente de tudo que você já viu, com o maior objetivo de você se tornar sua melhor versão, não só para saude física mas também para sua saude mental. Vamos acompanhar de perto seu processo e sua evolução. Vamos te ajudar alcançar seu objetivo sem sofrimentos ou dietas malucas.
     </h3>
-    <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://chk.eduzz.com/8WPDZEE3WP', '_blank')">
+    <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://sun.eduzz.com/Z0BB4XJ70A', '_blank')">
       Participe!
     </button>
   </section>
@@ -425,7 +425,7 @@
           <p class="uppercase text-gray-500 md:mb-6">Social</p>
           <ul class="list-reset mb-6">
             <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-              <a href="https://www.instagram.com/desafiogymrats/" target="_blank" class="no-underline hover:underline text-gray-800 hover:text-blue-500">Instagram</a>
+              <a href="https://www.instagram.com/desafiogymrats/" target="_blank" class="no-underline hover:underline text-gray-800 hover:text-gray-500">Instagram</a>
             </li>
           </ul>
         </div>
@@ -463,7 +463,7 @@
         navaction.classList.add("gradient");
         navaction.classList.remove("text-gray-800");
         navaction.classList.add("text-white");
-        brandname.classList.add("text-blue-600");
+        brandname.classList.add("text-gray-600");
 
         //Use to switch toggleColour colours
         for (var i = 0; i < toToggle.length; i++) {
@@ -480,7 +480,7 @@
         navaction.classList.remove("text-white");
         navaction.classList.add("text-gray-800");
         brandname.classList.remove("text-white");
-        brandname.classList.remove("text-blue-600");
+        brandname.classList.remove("text-gray-600");
         //Use to switch toggleColour colours
         for (var i = 0; i < toToggle.length; i++) {
           toToggle[i].classList.add("text-white");
