--- a/GymRatsMan.html
+++ b/GymRatsMan.html
@@ -79,7 +79,7 @@
             <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://www.instagram.com/desafiogymrats/" target="_blank">Instagram</a>
           </li>
         </ul>
-        <button id="navAction" class="mx-auto lg:mx-0 hover:underline fjalla-one-regular rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out bg-white text-gray-800" onclick="window.open('https://sun.eduzz.com/KW8KVJ1201', '_blank')">
+        <button id="navAction" class="mx-auto lg:mx-0 hover:underline fjalla-one-regular rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out bg-white text-gray-800" onclick="window.open('https://sun.eduzz.com/39VE8PX7WR', '_blank')">
           Participe
         </button>
       </div>
@@ -99,7 +99,7 @@
           <p class="mx-auto lg:mx-0 leading-normal text-1xl mb-8">
             Garanta sua vaga!
           </p>
-          <button class="z-10 mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://sun.eduzz.com/KW8KVJ1201', '_blank')">
+          <button class="z-10 mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://sun.eduzz.com/39VE8PX7WR', '_blank')">
             Participe
           </button>
         </div>
@@ -369,7 +369,7 @@
               <span class="text-base"> </span>
             </div>
             <div class="flex items-center justify-center">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://sun.eduzz.com/KW8KVJ1201', '_blank')">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://sun.eduzz.com/39VE8PX7WR', '_blank')">
                 Participe
               </button>
             </div>
@@ -407,7 +407,7 @@
     <h3 class="my-4 text-base leading-tight">
       Um desafio diferente de tudo que você já viu, com o maior objetivo de você se tornar sua melhor versão, não só para saude física mas também para sua saude mental. Vamos acompanhar de perto seu processo e sua evolução. Vamos te ajudar alcançar seu objetivo sem sofrimentos ou dietas malucas.
     </h3>
-    <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://sun.eduzz.com/KW8KVJ1201', '_blank')">
+    <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 fjalla-one-regular rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out" onclick="window.open('https://sun.eduzz.com/39VE8PX7WR', '_blank')">
       Participe!
     </button>
   </section>
