--- a/GymRats.html
+++ b/GymRats.html
@@ -104,14 +104,14 @@
           </button>
         </div>
         <!--Right Col-->
-        <div class="w-full md:w-3/5 py-0 text-center z-10">
+        <div class="w-full md:w-3/5 py-0 text-center z-0">
           <img class="w-full md:w-4/5 z-0" src="./imgs/imagem5.png">
         </div>
       </div>
     </div>
   </div>
   
-  <div class="relative z-0 -mt-40 g:-mt-104">
+  <div class="relative z-10 -mt-40 g:-mt-104">
     <svg viewBox="0 0 1428 174" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g transform="translate(-2.000000, 44.000000)" fill="#252525" fill-rule="nonzero">
@@ -126,7 +126,7 @@
     </svg>
   </div>
   
-  <section class="bg-back border-b py-8">
+  <section class="bg-back border-b py-8 z-10">
     <div class="container mx-auto pt-4 pb-12">
       <h2 class="w-full my-2 text-5xl fjalla-one-regular leading-tight text-center text-white-800">
         Resultados
