--- a/GymRats.html
+++ b/GymRats.html
@@ -368,7 +368,7 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
               <p>Suporte Individualizado</p>
             </div>
             <ul class="w-full text-center text-sm">
-              <li class="py-4 text-white">Grupo individualizado no wpp com suporte 24hrs para todas suas dúvidas diretamente com a Lara e sua nutri + grupão com todas as alunas para uma motivar a outra.</li>
+              <li class="py-4 text-white">Grupo individualizado no wpp com suporte para todos suas dúvidas diretamente com nossa equipe + grupão com todas as alunas para uma motivar a outra.</li>
             </ul>
           </div>
         </div>
@@ -420,28 +420,35 @@ Então muito obg de verdade, como já falei tenho muito a melhorar, mais sei que
           <!-- Instrutor 2 -->
           <div class="w-full flex-shrink-0 p-6 flex flex-col items-center">
             <div class="instructor-image mb-4">
-              <img src="./imgs/rari.png" alt="Raynara">
+              <img src="./imgs/GabiMini.png" alt="Raynara">
             </div>
             <div class="text-center">
               <h3 class="text-3xl gradientText fjalla-one-regular leading-none mb-3">
-                @raynara_nutri
+               @gabifferreiraa
               </h3>
               <p class="text-white-600 mb-8">
-                Oi, prazer, Raynara. Vou ser sua nutricionista nesse caminho lindo que você está escolhendo percorrer. Vou cuidar de você e da sua saúde, dando o meu melhor para que você encontre a sua melhor versão. Sem dietas malucas ou exageradas, vou te mostrar que dá para emagrecer comendo o que gosta.
+               Oi, prazer, Gabriella! Sou sócia do desafio GYM RATS, influenciadora digital, mãe e formada em Ciências Contábeis.
+                Serei sua motivadora, mostrando que o corpo pós-parto só precisa de você e da sua constância para se transformar.
+                Com mais de 10 anos no mundo fitness, vou te inspirar a buscar sua melhor versão.
+                Nossa autoestima é essencial — sem ela, a mente não encontra equilíbrio.
+                Bora juntas nessa!
               </p>
             </div>
           </div>
           <!-- Instrutor 3 -->
           <div class="w-full flex-shrink-0 p-6 flex flex-col items-center">
             <div class="instructor-image mb-4">
-              <img src="./imgs/RicardoMini.png" alt="Lara">
+              <img src="./imgs/NathMini.png" alt="Lara">
             </div>
             <div class="text-center">
               <h3 class="text-3xl gradientText fjalla-one-regular leading-none mb-3">
-                Ricardo
+                @martinesnath
               </h3>
               <p class="text-white-600 mb-8">
-                Oi, prazer, Ricardo. Sou graduado em Educação Física e meu foco é fazer você se apaixonar pelo exercício físico e se cuidar. Vou te dar todo o suporte nos seus treinos de forma dinâmica e com diferentes níveis de intensidade.
+               Oi, prazer, Nathália! Sou nutricionista e apaixonada por ajudar pessoas a conquistarem sua melhor versão com equilíbrio e alegria.
+              Vou estar ao seu lado nesse desafio, cuidando da sua alimentação com carinho, leveza e sem dietas malucas.
+              Acredito que é possível ter resultados incríveis comendo bem e sem culpa.
+              Vamos transformar sua rotina juntas!
               </p>
               <p>.</p>
             </div>
